# grits

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: FUNDING.yml
.github/workflows/: rust_ci.yml
docs/: help.md
src/: cli.rs  line.rs  main.rs  tty.rs
src/scanner/: file.rs  mod.rs  stdin.rs
src/template/: error.rs  mod.rs  rules.rs  test.rs  token.rs
src/template/parse/: attr.rs  mod.rs  rules.rs  test.rs
