[package]
name = "grits"
authors = ["benjamin.van.nguyen@gmail.com"]
description = """
A text line processor that applies regular expressions with named captures
to input lines and transforms them using a user-generated template.
"""
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["commandline", "cli", "grep", "ripgrep", "regex"]
categories = ["command-line-utilities", "development-tools", "development-tools::debugging"]
rust-version = "1.84"
exclude=["/images"]

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["cargo", "derive"] }
clap_complete = "4.5.38"
crossterm = "0.28.1"
env_logger = "0.11.5"
indoc = "2.0.5"
log = "0.4.22"
regex = "1.11.1"
